--- a/templates/accolades.html
+++ b/templates/accolades.html
@@ -1,20 +1,20 @@
-<div class="accordion">
-	<div class="label orbitron pointer" data-ng-click="accordion($event);">
-		Zoovy, Inc.
+<div class="accordion" data-accordion="accordion">
+	<div class="item orbitron pointer" data-ng-click="accordion($event);">
+		<div class="label">Zoovy, Inc.</div>
 		<div class="text" data-accordion="content">
-			<img class="fluidImg" data-ng-src="images/accolades/zoovy.jpg" alt="Zoovy letter of recomendation" width=1651 height=1275>
+			<img class="fluidImg" data-ng-src="images/accolades/zoovy_1080x992.jpg" alt="Zoovy letter of recomendation" width=1080 height=992>
 		</div>
 	</div>
-	<div class="label orbitron pointer" data-ng-click="accordion($event);">
-		DeVry University
+	<div class="item orbitron pointer" data-ng-click="accordion($event);">
+		<div class="label" data-ng-click="accordion($event);">DeVry University</div>
 		<div class="text" data-accordion="content">
-			<img class="fluidImg" data-ng-src="images/accolades/devry.jpg" alt="DeVry University letter of recomendation" width=1651 height=1275>
+			<img class="fluidImg" data-ng-src="images/accolades/devry_1080x1055.jpg" alt="DeVry University letter of recomendation" width=1080 height=1055>
 		</div>
 	</div>
-	<div class="label orbitron pointer" data-ng-click="accordion($event);">
-		MLD Graphics, Inc.
+	<div class="item orbitron pointer" data-ng-click="accordion($event);">
+		<div class="label" data-ng-click="accordion($event);">MLD Graphics, Inc.</div>
 		<div class="text" data-accordion="content">
-			<img class="fluidImg" data-ng-src="images/accolades/mld.jpg" alt="MLD Graphics letter of recomendation" width=1651 height=1275>
+			<img class="fluidImg" data-ng-src="images/accolades/mld_1080x1398.jpg" alt="MLD Graphics letter of recomendation" width=1080 height=1398>
 		</div>
 	</div>
 </div>
