--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,15 @@
 <div class="landing">
-	<div class="headline orbitron">Ryan Murray,</div>
-	<div class="underHeadline">A front-end developer specializing in single page web applications, <br>engineer, and all around great guy.</div>
+	<div class="headline orbitron">ryan murray,</div>
+	<div class="underHeadline">front-end single page web application developer, <br>engineer, and all around great guy.</div>
 	<div class="legend">
 		<a href="#/about" class="category">
 			<div class="catTitle">ABOUT</div>
-			<img class="fluidImg blurThis graphic" src="images/ryan_200x200.jpg" width=200 height=200 alt="">
+			<img class="fluidImg blurThis graphic" data-ng-src="images/ryan_200x200.jpg" width=200 height=200 alt="">
 		</a>
 		<a href="#/portfolio" class="category">
 			<div class="catTitle">PORTFOLIO</div>
 			<div class="portCont">
-				<img class="fluidImg blurThis port" src="images/portfolio_200x200.png" width=200 height=200 alt="">
+				<img class="fluidImg blurThis port" data-ng-src="images/portfolio_200x200.png" width=200 height=200 alt="">
 			</div>
 		</a>
 		<a href="#/codesamples" class="category">
@@ -18,9 +18,8 @@
 			<div class="codeSample blurThis graphic">><span>_</span></div>
 		</a>
 		<a href="#/accolades" class="category testi">
-			<div class="comingSoon">COMING SOON!</div>
 			<div class="catTitle">ACCOLADES</div>
-			<img class="fluidImg blurThis graphic" src="images/testimonials_200x200.png" width=200 height=200 alt="">
+			<img class="fluidImg blurThis graphic" data-ng-src="images/testimonials_200x200.png" width=200 height=200 alt="">
 			<div class="comment comment1"></div>
 			<div class="comment comment2"></div>
 			<div class="comment comment3"></div>
