--- a/templates/home.html
+++ b/templates/home.html
@@ -6,15 +6,15 @@
 			<div class="catTitle">ABOUT</div>
 			<img class="fluidImg blurThis graphic" data-ng-src="images/ryan_200x200.jpg" width=200 height=200 alt="">
 		</a>
-		<a href="#/portfolio" class="category">
-			<div class="catTitle">PORTFOLIO</div>
+		<a href="#/projects" class="category">
+			<div class="catTitle">PROJECTS</div>
 			<div class="portCont">
 				<img class="fluidImg blurThis port" data-ng-src="images/portfolio_200x200.png" width=200 height=200 alt="">
 			</div>
 		</a>
 		<a href="#/codesamples" class="category">
 			<div class="comingSoon">COMING SOON!</div>
-			<div class="catTitle">CODE SAMPLES</div>
+			<div class="catTitle">CODE</div>
 			<div class="codeSample blurThis graphic">><span>_</span></div>
 		</a>
 		<a href="#/accolades" class="category testi">
